--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -4,7 +4,7 @@
   &__photo {
     width: 55%;
     box-shadow: 0 1.5rem 4rem rgba($color-black, 0.4);
-    border-radius: 2px;
+    // border-radius: 2px;
     position: absolute;
     z-index: 10;
     transition: all 0.2s;
@@ -24,9 +24,12 @@
     }
     &:hover {
       outline: 1.5rem solid $color-primary;
-      transform: scale(1.05);
+      transform: scale(1.05) translateY(-0.5rem);
       box-shadow: 0 2.5rem 4rem rgba($color-black, 0.5);
       z-index: 20;
     }
+  }
+  &:hover &__photo:not(:hover) {
+    transform: scale(0.95);
   }
 }
