box-decoration-break property

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -9,6 +9,7 @@
   background-size: cover;
   background-position: top;
   position: relative;
+  -webkit-clip-path: polygon(0 0, 0 100%, 100% 75vh, 100% 0);
   clip-path: polygon(0 0, 0 100%, 100% 75vh, 100% 0);
 
   &__logo-box {
