--- a/css/style.css
+++ b/css/style.css
@@ -174,8 +174,6 @@ body {
   position: relative;
   height: 50rem; }
   .card__side {
-    color: #fff;
-    font-size: 2rem;
     height: 50rem;
     transition: all 0.8s ease;
     position: absolute;
@@ -199,13 +197,31 @@ body {
   .card__picture {
     background-size: cover;
     height: 23rem;
-    background-blend-mode: screen; }
+    background-blend-mode: screen;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
     .card__picture--1 {
       background-image: linear-gradient(to right bottom, #ffb90b, #ff7738), url(../img/nat-5.jpg); }
     .card__picture--2 {
       background-image: url(../img/nat-5.jpg); }
     .card__picture--3 {
       background-image: url(../img/nat-5.jpg); }
+  .card__heading {
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    text-align: right;
+    color: #fff;
+    position: absolute;
+    top: 12rem;
+    right: 2rem;
+    width: 75%; }
+  .card__heading-span {
+    padding: 1rem 1.5rem;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone; }
+    .card__heading-span--1 {
+      background-image: linear-gradient(to right bottom, rgba(255, 185, 11, 0.85), rgba(255, 119, 56, 0.85)); }
 
 .composition {
   position: relative; }
@@ -283,6 +299,7 @@ body {
   background-size: cover;
   background-position: top;
   position: relative;
+  -webkit-clip-path: polygon(0 0, 0 100%, 100% 75vh, 100% 0);
   clip-path: polygon(0 0, 0 100%, 100% 75vh, 100% 0); }
   .header__logo-box {
     position: absolute;
