--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -6,9 +6,6 @@
   height: 50rem;
 
   &__side {
-    color: #fff;
-    font-size: 2rem;
-
     height: 50rem;
     transition: all 0.8s ease;
     position: absolute;
@@ -47,6 +44,8 @@
     background-size: cover;
     height: 23rem;
     background-blend-mode: screen;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
 
     &--1 {
       background-image: linear-gradient(
@@ -61,6 +60,29 @@
     }
     &--3 {
       background-image: url(../img/nat-5.jpg);
+    }
+  }
+  &__heading {
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    text-align: right;
+    color: $color-white;
+    position: absolute;
+    top: 12rem;
+    right: 2rem;
+    width: 75%;
+  }
+  &__heading-span {
+    padding: 1rem 1.5rem;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
+    &--1 {
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-secondary-light, 0.85),
+        rgba($color-secondary-dark, 0.85)
+      );
     }
   }
 }
