--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -25,3 +25,8 @@
   padding: 25rem 0 15rem 0;
   margin-top: -20rem;
 }
+
+.section-stories {
+  padding: 15 0;
+  background-color: $color-grey-light-1;
+}
