Adding video and object-fit property

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -27,6 +27,6 @@
 }
 
 .section-stories {
-  padding: 15 0;
-  background-color: $color-grey-light-1;
+  padding: 15rem 0;
+  position: relative;
 }
