--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,19 @@ body {
 .u-margin-top-huge {
   margin-top: 10rem; }
 
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  opacity: 0.15; }
+  .bg-video__content {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; }
+
 .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -323,7 +336,7 @@ body {
   margin: 0 auto;
   box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
   padding: 6rem;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.6);
   border-radius: 3px;
   font-size: 1.6rem;
   transform: skewX(-12deg); }
@@ -358,7 +371,8 @@ body {
     opacity: 1;
     transform: translate(-50%, -50%); }
   .story:hover .story__img {
-    transform: translateX(-4rem) scale(1); }
+    transform: translateX(-4rem) scale(1);
+    filter: blur(3px) brightness(80%); }
 
 .row {
   max-width: 114rem;
@@ -427,5 +441,5 @@ body {
   margin-top: -20rem; }
 
 .section-stories {
-  padding: 15 0;
-  background-color: #f7f7f7; }
+  padding: 15rem 0;
+  position: relative; }
