--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -3,7 +3,7 @@
   margin: 0 auto;
   box-shadow: 0 3rem 6rem rgba($color-black, 0.1);
   padding: 6rem;
-  background-color: white;
+  background-color: rgba($color-white, 0.6);
   border-radius: 3px;
   font-size: $default-font-size;
   transform: skewX(-12deg);
@@ -45,5 +45,6 @@
   }
   &:hover &__img {
     transform: translateX(-4rem) scale(1);
+    filter: blur(3px) brightness(80%);
   }
 }
