--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,18 @@
+/* 
+0 - 600px:      Phone
+600 - 900px:    Tab portrait
+900 - 1200px:   Tab landscape
+1200 - 1800px:  is where our normal styles apply
+1800+ :         Big desktop
+*/
+/* breakpoints arguments choices
+- phone
+- tab-port
+- tab-land
+- big-desktop
+
+1em = 16px
+*/
 @keyframes moveInLeft {
   0% {
     opacity: 0;
