--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -11,3 +11,51 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+// MEDIA QUERY MANAGER
+/* 
+0 - 600px:      Phone
+600 - 900px:    Tab portrait
+900 - 1200px:   Tab landscape
+1200 - 1800px:  is where our normal styles apply
+1800+ :         Big desktop
+*/
+@mixin respond-phone {
+  @media (max-width: 600px) {
+    @content;
+  }
+}
+
+/* breakpoints arguments choices
+- phone
+- tab-port
+- tab-land
+- big-desktop
+
+1em = 16px
+*/
+@mixin respond($breakpoint) {
+  @if breakpoint == phone {
+    @media (max-width: 37.5em) {
+      //600px     600/16=37.5
+      @content;
+    }
+  }
+  @if breakpoint == tab-port {
+    @media (max-width: 56.25em) {
+      //900px
+      @content;
+    }
+  }
+  @if breakpoint == tab-land {
+    @media (max-width: 75em) {
+      //1200px
+      @content;
+    }
+  }
+  @if breakpoint == big-desktop {
+    @media (min-width: 112.5em) {
+      //1800px
+      @content;
+    }
+  }
+}
